corrections z-index

--- a/css/navigation/_nav-header.scss
+++ b/css/navigation/_nav-header.scss
@@ -163,7 +163,7 @@
 
 .btn-overlay {
 	position: absolute;
-	z-index: 1;
+	z-index: 666;
 	left:0;
 	right: 0;
 	bottom: 0;
@@ -195,6 +195,7 @@
 
 .h-nav {
 	position: absolute;
+	z-index: 999;
 	top: 0;
 	left: 100%;
 	bottom: 0;
